finished section 2 assessment

--- a/4 Inference and Modeling/Inference and Modeling Notes.Rmd
+++ b/4 Inference and Modeling/Inference and Modeling Notes.Rmd
@@ -25,24 +25,20 @@ After completing Section 1, you will be able to:
 
 -   The task of statistical inference is to estimate an unknown population parameter using observed data from a sample.
 
-```{=html}
 <!-- -->
-```
+
 -   In a sampling model, the collection of elements in the urn is called the *population.*
 
-```{=html}
 <!-- -->
-```
+
 -   A *parameter* is a number that summarizes data for an entire population.
 
-```{=html}
 <!-- -->
-```
+
 -   A *sample* is observed data from a subset of the population.
 
-```{=html}
 <!-- -->
-```
+
 -   An *estimate* is a summary of the observed data about a parameter that we believe is informative. It is a data-driven guess of the population parameter.
 
 ![](images/clipboard-3095055459.png)
@@ -200,7 +196,9 @@ p <- 0.45
 
 ![](images/clipboard-4023891576.png)
 
-### Code: Computing the probability of Xbar  being within .01 of p
+plug-in estimate
+
+### Code: Computing the probability of Xbar being within .01 of p
 
 ```{r}
 X_hat <- 0.48
@@ -216,12 +214,11 @@ pnorm(0.01/se) - pnorm(-0.01/se)
 
 -   We can run Monte Carlo simulations to compare with theoretical results assuming a value of p.
 
-```{=html}
 <!-- -->
-```
+
 -   In practice, is unknown. We can corroborate theoretical results by running Monte Carlo simulations with one or several values of p.
 
-We don't know p, but we could run it for various values of p and sample sizes N and see that the theory works well for most values.------------------=
+We don't know p, but we could run it for various values of p and sample sizes N and see that the theory works well for most values.
 
 -   One practical choice for p when modeling is Xbar, the observed value of in a sample Xhat.![](images/clipboard-2180675967.png)
 
@@ -294,3 +291,273 @@ Write function called `take_sample` that takes the proportion of Democrats p and
 Calculate the sample average if the proportion of Democrats equals 0.45 and the sample size is 100.
 
 ![](images/clipboard-1522920268.png)
+
+```{r}
+# Write a function called `take_sample` that takes `p` and `N` as arguements and returns the average value of a randomly sampled population.
+take_sample <- function(p,N){
+    sim <- sample(c(1,0), N, replace = TRUE, prob = c(p, 1-p))   
+    mean(sim)
+}
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Define `p` as the proportion of Democrats in the population being polled
+p <- 0.45
+
+# Define `N` as the number of people polled
+N <- 100
+
+# Call the `take_sample` function to determine the sample average of `N` randomly selected people from a population containing a proportion of Democrats equal to `p`. Print this value to the console.
+take_sample(p, N)
+```
+
+# Exercise 2. Distribution of errors - 1
+
+![](images/clipboard-1445621711.png)
+
+-   The function `take_sample` that you defined in the previous exercise has already been run for you.
+
+<!-- -->
+
+-   Use the `replicate` function to replicate subtracting the result of `take_sample` from the value of p 10,000 times.
+
+<!-- -->
+
+-   Use the `mean` function to calculate the average of the differences between the sample average and actual value of p.
+
+```{r}
+# Define `p` as the proportion of Democrats in the population being polled
+p <- 0.45
+
+# Define `N` as the number of people polled
+N <- 100
+
+# The variable `B` specifies the number of times we want the sample to be replicated
+B <- 10000
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Create an objected called `errors` that replicates subtracting the result of the `take_sample` function from `p` for `B` replications
+errors <- replicate(B, {
+    differences <- p - take_sample(p,N)
+    differences
+})
+
+# Calculate the mean of the errors. Print this value to the console.
+mean(errors)
+```
+
+# Exercise 3. Distribution of errors - 2
+
+![](images/clipboard-2189136323.png)
+
+The `errors` object has already been loaded for you. Use the `hist` function to plot a histogram of the values contained in the vector `errors`. Which statement best describes the distribution of the errors?
+
+![![](images/clipboard-1090704458.png)](images/clipboard-3251208375.png)
+
+# Exercise 4. Average size of error
+
+![](images/clipboard-162436746.png)
+
+```{r}
+# Define `p` as the proportion of Democrats in the population being polled
+p <- 0.45
+
+# Define `N` as the number of people polled
+N <- 100
+
+# The variable `B` specifies the number of times we want the sample to be replicated
+B <- 10000
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# We generated `errors` by subtracting the estimate from the actual proportion of Democratic voters
+errors <- replicate(B, p - take_sample(p, N))
+
+# Calculate the mean of the absolute value of each simulated error. Print this value to the console.
+mean(abs(errors))
+
+```
+
+# Exercise 5. Standard deviation of the spread
+
+The standard error is related to the typical **size** of the error we make when predicting. We say **size** because, as we just saw, the errors are centered around 0. In that sense, the typical error is 0. For mathematical reasons related to the central limit theorem, we actually use the standard deviation of `errors` rather than the average of the absolute values.
+
+```{r}
+# Define `p` as the proportion of Democrats in the population being polled
+p <- 0.45
+
+# Define `N` as the number of people polled
+N <- 100
+
+# The variable `B` specifies the number of times we want the sample to be replicated
+B <- 10000
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# We generated `errors` by subtracting the estimate from the actual proportion of Democratic voters
+errors <- replicate(B, p - take_sample(p, N))
+
+# Calculate the standard deviation of `errors`
+sqrt(mean((errors)^2))
+
+```
+
+# Exercise 6. Estimating the standard error
+
+![](images/clipboard-2893701149.png)
+
+-   Calculate the standard error using the `sqrt` function
+
+```{r}
+# Define `p` as the expected value equal to 0.45
+p <- 0.45
+
+# Define `N` as the sample size
+N <- 100
+
+# Calculate the standard error
+sqrt(p*(1-p)/N)
+```
+
+# Exercise 7. Standard error of the estimate
+
+![](images/clipboard-3509517342.png)
+
+-   Simulate a poll `X` using the `sample` function.
+
+-   When using the `sample` function, create a vector using `c()` that contains all possible polling options where '1' indicates a Democratic voter and '0' indicates a Republican voter.
+
+-   When using the `sample` function, use `replace = TRUE` within the `sample` function to indicate that sampling from the vector should occur with replacement.
+
+-   When using the `sample` function, use `prob =` within the `sample` function to indicate the probabilities of selecting either element (0 or 1) within the vector of possibilities.
+
+-   Use the `mean` function to calculate the average of the simulated poll, `X_bar`.
+
+-   Calculate the standard error of the `X_bar` using the `sqrt` function and print the result.
+
+```{r}
+# Define `p` as a proportion of Democratic voters to simulate
+p <- 0.45
+
+# Define `N` as the sample size
+N <- 100
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Define `X` as a random sample of `N` voters with a probability of picking a Democrat ('1') equal to `p`
+X <- sample(c(1,0), N, replace = TRUE, prob = c(p, 1-p))
+X
+# Define `X_bar` as the average sampled proportion
+X_bar <- mean(X)
+X_bar
+# Calculate the standard error of the estimate. Print the result to the console.
+sqrt((X_bar * (1-X_bar))/N)
+
+```
+
+# Exercise 8. Plotting the standard error
+
+![](images/clipboard-1311434742.png)
+
+```{r}
+N <- seq(100, 5000, len = 100)
+p <- 0.5
+se <- sqrt(p*(1-p)/N)
+plot(se, N)
+```
+
+![![](images/clipboard-2298647615.png)](images/clipboard-1973722717.png)
+
+# Exercise 9. Distribution of X-hat
+
+![](images/clipboard-2372815898.png)
+
+![](images/clipboard-2438765111.png)
+
+# Exercise 10. Distribution of the errors
+
+![](images/clipboard-705616515.png)
+
+![](images/clipboard-2213686483.png)
+
+# Exercise 11. Plotting the errors
+
+Make a qq-plot of the `errors` you generated previously to see if they follow a normal distribution.
+
+-   Run the supplied code
+
+-   Use the `qqnorm` function to produce a qq-plot of the errors.
+
+-   Use the `qqline` function to plot a line showing a normal distribution.
+
+```{r}
+# Define `p` as the proportion of Democrats in the population being polled
+p <- 0.45
+
+# Define `N` as the number of people polled
+N <- 100
+
+# The variable `B` specifies the number of times we want the sample to be replicated
+B <- 10000
+
+# Use the `set.seed` function to make sure your answer matches the expected result after random sampling
+set.seed(1)
+
+# Generate `errors` by subtracting the estimate from the actual proportion of Democratic voters
+errors <- replicate(B, p - take_sample(p, N))
+
+# Generate a qq-plot of `errors` with a qq-line showing a normal distribution
+qqnorm(errors)
+qqline(errors)
+```
+
+# Exercise 12. Estimating the probability of a specific value of X-bar
+
+![](images/clipboard-1196500618.png)
+
+-   Use `pnorm` to define the probability that a value will be greater than 0.5.
+
+![](images/clipboard-3536925196.png)
+
+```{r}
+# Define `p` as the proportion of Democrats in the population being polled
+p <- 0.45
+
+# Define `N` as the number of people polled
+N <- 100
+
+# Calculate the probability that the estimated proportion of Democrats in the population is greater than 0.5. Print this value to the console.
+1-pnorm(0.5, p, sqrt(p*(1-p)/N))
+```
+
+# Exercise 13. Estimating the probability of a specific error size
+
+![](images/clipboard-5542308.png)
+
+-   Calculate the standard error of the sample average using the `sqrt` function.
+
+-   Use `pnorm` twice to define the probabilities that a value will be less than -0.01 or greater than 0.01.
+
+-   Combine these results to calculate the probability that the error *size* will be 0.01 or larger.
+
+```{r}
+# Define `N` as the number of people polled
+N <-100
+
+# Define `X_hat` as the sample average
+X_hat <- 0.51
+
+# Define `se_hat` as the standard error of the sample average
+se_hat <- sqrt(X_hat*(1-X_hat)/N)
+
+# Calculate the probability that the error is 0.01 or larger
+1-(pnorm(0.01/se_hat) - pnorm(-0.01/se_hat))
+```
+
+Note: CLT works if Xbar i used in place of p. Plug-in estimate.
