--- a/4 Inference and Modeling/Inference and Modeling Notes.Rmd
+++ b/4 Inference and Modeling/Inference and Modeling Notes.Rmd
@@ -623,3 +623,386 @@ pnorm(z) - pnorm(-z)    # demonstrating that this z value gives correct probabil
 ![A common source of confusion is why `qnorm(.975)` is used rather than `qnorm(.95)` to find the 95% confidence interval. This is because the normal distribution is symmetric and our confidence interval should cover the middle 95% of the distribution:](images/clipboard-3989755348.png)
 
 ![![](images/clipboard-390637980.png)](images/ci95.png)
+
+## A Monte Carlo Simulation for Confidence Intervals
+
+-   We can run a Monte Carlo simulation to confirm that a 95% confidence interval contains the true value of p 95% of the time.
+
+-   A plot of confidence intervals from this simulation demonstrates that most intervals include p, but roughly 5% of intervals miss the true value of p.
+
+### Code: Monte Carlo simulation
+
+Note that to compute the exact 95% confidence interval, we would use `qnorm(.975)*SE_hat` instead of`2*SE_hat`.
+
+```{r}
+B <- 10000
+inside <- replicate(B, {
+    X <- sample(c(0,1), size = N, replace = TRUE, prob = c(1-p, p))
+    X_hat <- mean(X)
+    SE_hat <- sqrt(X_hat*(1-X_hat)/N)
+    between(p, X_hat - 2*SE_hat, X_hat + 2*SE_hat)    # TRUE if p in confidence interval
+})
+mean(inside)
+```
+
+![](images/clipboard-2194538514.png)
+
+## The Correct Language
+
+-   The 95% confidence intervals are random, but p is not random.
+
+-   95% refers to the probability that the random interval falls on top of p.
+
+-   It is technically incorrect to state that p has a 95% chance of being in between two values because that implies p is random.
+
+## Power
+
+-   If we are trying to predict the result of an election, then a confidence interval that includes a spread of 0 (a tie) is not helpful.
+
+-   A confidence interval that includes a spread of 0 does not imply a close election, it means the sample size is too small.
+
+-   Power is the probability of detecting an effect when there is a true effect to find. Power increases as sample size increases, because larger sample size means smaller standard error.
+
+### Code: Confidence interval for the spread with sample size of 25
+
+Note that to compute the exact 95% confidence interval, we would use `c(-qnorm(.975), qnorm(.975))` instead of 1.96.
+
+```{r}
+N <- 25
+X_hat <- 0.48
+(2*X_hat - 1) + c(-2, 2)*2*sqrt(X_hat*(1-X_hat)/N)
+```
+
+## p-Values
+
+-   The null hypothesis is the hypothesis that there is no effect. In this case, the null hypothesis is that the spread is 0, or p=0.5.
+
+```{=html}
+<!-- -->
+```
+-   The p-value is the probability of detecting an effect of a certain size or larger when the null hypothesis is true.
+
+```{=html}
+<!-- -->
+```
+-   We can convert the probability of seeing an observed value under the null hypothesis into a standard normal random variable. We compute the value of that corresponds to the observed result, and then use that to compute the p-value.
+
+```{=html}
+<!-- -->
+```
+-   If a 95% confidence interval does not include our observed value, then the p-value must be smaller than 0.05.
+
+```{=html}
+<!-- -->
+```
+-   It is preferable to report confidence intervals instead of p-values, as confidence intervals give information about the size of the estimate and p-values do not.
+
+### Code: Computing a p-value for observed spread of 0.02
+
+```{r}
+N <- 100    # sample size
+z <- sqrt(N) * 0.02/0.5    # spread of 0.02
+1 - (pnorm(z) - pnorm(-z))
+```
+
+## Another Explanation of p-Values
+
+The p-value is the probability of observing a value as extreme or more extreme than the result given that the null hypothesis is true.
+
+In the context of the normal distribution, this refers to the probability of observing a Z-score whose absolute value is as high or higher than the Z-score of interest.
+
+Suppose we want to find the p-value of an observation 2 standard deviations larger than the mean. This means we are looking for anything with ![](images/clipboard-3128431914.png){width="42"}.
+
+Graphically, the p-value gives the probability of an observation that's at least as far away from the mean or further. This plot shows a standard normal distribution (centered at z=0 with a standard deviation of 1). The shaded tails are the region of the graph that are 2 standard deviations or more away from the mean.
+
+![The right tail can be found with `1-pnorm(2)`. We want to have both tails, though, because we want to find the probability of any observation as far away from the mean or farther, in either direction. (This is what's meant by a two-tailed p-value.) Because the distribution is symmetrical, the right and left tails are the same size and we know that our desired value is just `2*(1-pnorm(2))`.](images/pvalue-normal-dist.jpg)
+
+Recall that, by default, `pnorm()` gives the CDF for a normal distribution with a mean of ![](images/clipboard-1238477884.png){width="36" height="17"} and standard deviation of ![](images/clipboard-3422139651.png){width="36" height="12"}. To find p-values for a given z-score `z` in a normal distribution with mean mu and standard deviation `sigma,` use `2*(1-pnorm(z, mu, sigma))` instead.
+
+# Assessment 3.1: Confidence Intervals and p-Values
+
+## Exercise 1. Confidence interval for p
+
+For the following exercises, we will use actual poll data from the 2016 election. The exercises will contain pre-loaded data from the `dslabs` package.
+
+```{r}
+library(dslabs)
+data("polls_us_election_2016")
+```
+
+We will use all the national polls that ended within a few weeks before the election.
+
+Assume there are only two candidates and construct a 95% confidence interval for the election night proportion p.
+
+-   Use `filter` to subset the data set for the poll data you want. Include polls that ended on or after October 31, 2016 (`enddate`). Only include polls that took place in the United States. Call this filtered object `polls`.
+
+-   Use `nrow` to make sure you created a filtered object `polls` that contains the correct number of rows.
+
+-   Extract the sample size `N` from the first poll in your subset object `polls`.
+
+-   Convert the percentage of Clinton voters (`rawpoll_clinton`) from the first poll in `polls` to a proportion, `X_hat`. Print this value to the console.
+
+-   Find the standard error of `X_hat` given `N`. Print this result to the console.
+
+-   Calculate the 95% confidence interval of this estimate using the `qnorm` function.
+
+-   Save the lower and upper confidence intervals as an object called `ci`. Save the lower confidence interval first.
+
+```{r}
+# Load the data
+library(dslabs)
+library(dplyr)
+data(polls_us_election_2016)
+head(polls_us_election_2016)
+
+# Generate an object `polls` that contains data filtered for polls that ended on or after October 31, 2016 in the United States
+polls <- polls_us_election_2016 %>% filter(enddate >= "2016-10-31" & state == "U.S.")
+
+# How many rows does `polls` contain? Print this value to the console.
+nrow(polls)
+
+# Assign the sample size of the first poll in `polls` to a variable called `N`. Print this value to the console.
+N <- polls$samplesize[1]
+N
+
+# For the first poll in `polls`, assign the estimated percentage of Clinton voters to a variable called `X_hat`. Print this value to the console.
+X_hat <- polls$rawpoll_clinton[1]/100
+X_hat
+
+# Calculate the standard error of `X_hat` and save it to a variable called `se_hat`. Print this value to the console.
+se_hat <- sqrt(X_hat * (1-X_hat)/N)
+
+# Use `qnorm` to calculate the 95% confidence interval for the proportion of Clinton voters. Save the lower and then the upper confidence interval to a variable called `ci`.
+ci <- c(X_hat - qnorm(0.975)*se_hat, X_hat + qnorm(0.975)*se_hat)
+ci
+```
+
+## Exercise 2. Pollster results for p
+
+Create a new object called `pollster_results` that contains the pollster's name, the end date of the poll, the proportion of voters who declared a vote for Clinton, the standard error of this estimate, and the lower and upper bounds of the confidence interval for the estimate.
+
+-   Use the `mutate` function to define four new columns: `X_hat`, `se_hat`, `lower`, and `upper`. Temporarily add these columns to the `polls` object that has already been loaded for you.
+
+-   In the `X_hat` column, convert the raw poll results for Clinton to a proportion.
+
+-   In the `se_hat` column, calculate the standard error of `X_hat` for each poll using the `sqrt` function.
+
+-   In the `lower` column, calculate the lower bound of the 95% confidence interval using the `qnorm` function.
+
+-   In the `upper` column, calculate the upper bound of the 95% confidence interval using the `qnorm` function.
+
+-   Use the `select` function to select the columns from `polls` to save to the new object `pollster_results`.
+
+```{r}
+# The `polls` object that filtered all the data by date and nation has already been loaded. Examine it using the `head` function.
+head(polls)
+
+# Create a new object called `pollster_results` that contains columns for pollster name, end date, X_hat, se_hat, lower confidence interval, and upper confidence interval for each poll.
+pollster_results <- polls %>%
+  mutate(X_hat = polls$rawpoll_clinton/100,
+         se_hat = sqrt(X_hat*(1-X_hat)/samplesize),
+         lower = X_hat - qnorm(0.975)*se_hat,
+         upper = X_hat + qnorm(0.975)*se_hat) %>%
+  select(pollster, enddate, X_hat, se_hat, lower, upper)
+
+
+pollster_results
+```
+
+## Exercise 3. Comparing to actual results - p
+
+The final tally for the popular vote was Clinton 48.2% and Trump 46.1%. Add a column called `hit` to `pollster_results`
+that states if the confidence interval included the true proportion p=0.482 or not. What proportion of confidence intervals included p?
+
+-   Use the `mutate` function to define a new variable called ‘hit’.
+
+-   Use logical expressions to determine if each values in `lower` and `upper` span the actual proportion.
+
+-   Use the `mean` function to determine the average value in `hit` and `summarize` the results using summarize.
+
+-   Save the result as an object called `avg_hit`.
+
+```{r}
+# The `pollster_results` object has already been loaded. Examine it using the `head` function.
+head(pollster_results)
+
+# Add a logical variable called `hit` that indicates whether the actual value exists within the confidence interval of each poll. Summarize the average `hit` result to determine the proportion of polls with confidence intervals include the actual value. Save the result as an object called `avg_hit`.
+p <- rep(0.482, 70)
+avg_hit <- pollster_results %>%
+  mutate(hit = between(p, lower, upper)) %>%
+  summarize(mean(hit))
+avg_hit
+
+#or
+avg_hit <- pollster_results %>% mutate(hit=(lower<0.482 & upper>0.482)) %>% summarize(mean(hit))
+avg_hit
+```
+
+## Exercise 4. Theory of confidence intervals
+
+If these confidence intervals are constructed correctly, and the theory holds up, what proportion of confidence intervals should include p?
+
+Ans. 0.95
+
+They were made using the margin of error...
+
+## Exercise 5. Confidence interval for d
+
+A much smaller proportion of the polls than expected produce confidence intervals containing p. Notice that most polls that fail to include p are underestimating. The rationale for this is that undecided voters historically divide evenly between the two main candidates on election day.
+
+In this case, it is more informative to estimate the spread or the difference between the proportion of two candidates d, or 0.482−0.461=0.021 for this election.
+
+Assume that there are only two parties and that  d=2p−1. Construct a 95% confidence interval for difference in proportions on election night.
+
+-   Use the `mutate` function to define a new variable called ‘d_hat’ in `polls`. The new variable subtract the proportion of Trump voters from the proportion of Clinton voters.
+
+-   Extract the sample size `N` from the first poll in your subset object `polls`.
+
+-   Extract the difference in proportions of voters `d_hat` from the first poll in your subset object polls.
+
+-   Use the formula above to calculate p from `d_hat`. Assign p to the variable `X_hat`.
+
+-   Find the standard error of the spread given `N`.
+
+-   Calculate the 95% confidence interval of this estimate of the difference in proportions, `d_hat`, using the `qnorm` function.
+
+-   Save the lower and upper confidence intervals as an object called `ci`. Save the lower confidence interval first.
+
+```{r}
+# Add a statement to this line of code that will add a new column named `d_hat` to `polls`. The new column should contain the difference in the proportion of voters.
+polls <- polls_us_election_2016 %>% filter(enddate >= "2016-10-31" & state == "U.S.") %>% mutate(d_hat = rawpoll_clinton/100 - rawpoll_trump/100)
+
+
+# Assign the sample size of the first poll in `polls` to a variable called `N`. Print this value to the console.
+N <- polls$samplesize[1]
+N
+
+# Assign the difference `d_hat` of the first poll in `polls` to a variable called `d_hat`. Print this value to the console.
+d_hat <- polls$d_hat[1]
+d_hat
+
+# Assign proportion of votes for Clinton to the variable `X_hat`.
+X_hat <- (d_hat+1)/2
+X_hat
+
+# Calculate the standard error of the spread and save it to a variable called `se_hat`. Print this value to the console.
+se_hat <- 2*sqrt(X_hat*(1-X_hat)/N)
+se_hat 
+
+# Use `qnorm` to calculate the 95% confidence interval for the difference in the proportions of voters. Save the lower and then the upper confidence interval to a variable called `ci`.
+ci <- c(d_hat - qnorm(0.975)*se_hat, d_hat + qnorm(0.975)*se_hat)
+ci
+```
+
+## Exercise 6. Pollster results for d
+
+Create a new object called `pollster_results` that contains the pollster's name, the end date of the poll, the difference in the proportion of voters who declared a vote either, and the lower and upper bounds of the confidence interval for the estimate.
+
+-   Use the `mutate` function to define four new columns: 'X_hat', 'se_hat', 'lower', and 'upper'. Temporarily add these columns to the `polls` object that has already been loaded for you.
+
+-   In the `X_hat` column, calculate the proportion of voters for Clinton using `d_hat`.
+
+-   In the `se_hat` column, calculate the standard error of the spread for each poll using the `sqrt` function.
+
+-   In the `lower` column, calculate the lower bound of the 95% confidence interval using the `qnorm` function.
+
+-   In the `upper` column, calculate the upper bound of the 95% confidence interval using the `qnorm` function.
+
+-   Use the `select` function to select the `pollster, enddate, d_hat, lower, upper` columns from `polls` to save to the new object `pollster_results`.
+
+```{r}
+pollster_results <- polls %>%
+  mutate(
+    X_hat = (d_hat+1)/2,
+    se_hat = sqrt(X_hat*(1-X_hat)/.$samplesize),
+    lower = d_hat - qnorm(0.975)*se_hat,
+    upper = d_hat + qnorm(0.975)*se_hat
+  ) %>%
+  select(pollster, enddate, d_hat, lower, upper)
+pollster_results
+```
+
+## Exercise 7. Comparing to actual results - d
+
+What proportion of confidence intervals for the difference between the proportion of voters included d, the actual difference in election day?
+
+-   Use the `mutate` function to define a new variable within`pollster_results` called hit.
+
+-   Use logical expressions to determine if each values in `lower` and `upper` span the actual difference in proportions of voters.
+
+-   Use the `mean` function to determine the average value in `hit` and summarize the results using `summarize`.
+
+-   Save the result as an object called `avg_hit`.
+
+```{r}
+# The `pollster_results` object has already been loaded. Examine it using the `head` function.
+head(pollster_results)
+
+# Add a logical variable called `hit` that indicates whether the actual value (0.021) exists within the confidence interval of each poll. Summarize the average `hit` result to determine the proportion of polls with confidence intervals include the actual value. Save the result as an object called `avg_hit`.
+avg_hit <- pollster_results %>% 
+  mutate(hit=(lower<0.021 & upper>0.021)) %>%
+  summarize(mean(hit))
+
+avg_hit
+```
+
+## Exercise 8. Comparing to actual results by pollster
+
+Although the proportion of confidence intervals that include the actual difference between the proportion of voters increases substantially, it is still lower that 0.95. In the next chapter, we learn the reason for this.
+
+-   Define a new variable `errors` that contains the difference between the estimated difference between the proportion of voters and the actual difference on election day, 0.021.
+
+-   To create the plot of errors by pollster, add a layer with the function `geom_point`. The aesthetic mappings require a definition of the x-axis and y-axis variables. So the code looks like the example below, but you fill in the variables for x and y.
+
+-   The last line of the example code adjusts the x-axis labels so that they are easier to read.
+
+```{r}
+# The `polls` object has already been loaded. Examine it using the `head` function.
+head(polls)
+library(ggplot2)
+
+# Add variable called `error` to the object `polls` that contains the difference between d_hat and the actual difference on election day. Then make a plot of the error stratified by pollster.
+polls %>% 
+  mutate(error = d_hat - 0.021) %>%
+  ggplot(aes(x = pollster, y = error)) +
+  geom_point() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+```
+
+## Exercise 9. Comparing to actual results by pollster - multiple polls
+
+Remake the plot you made for the previous exercise, but only for pollsters that took five or more polls.
+
+You can use dplyr tools `group_by` and `n` to group data by a variable of interest and then count the number of observations in the groups. The function `filter` filters data piped into it by your specified condition.
+
+For example:
+
+```{r}
+data %>% group_by(variable_for_grouping) 
+    %>% filter(n() >= 5)
+```
+
+-   Define a new variable `errors` that contains the difference between the estimated difference between the proportion of voters and the actual difference on election day, 0.021.
+
+-   Group the data by pollster using the `group_by` function.
+
+-   Filter the data by pollsters with 5 or more polls.
+
+-   Use `ggplo`t to create the plot of errors by pollster.
+
+-   Add a layer with the function `geom_point`.
+
+```{r}
+# The `polls` object has already been loaded. Examine it using the `head` function.
+head(polls)
+
+# Add variable called `error` to the object `polls` that contains the difference between d_hat and the actual difference on election day. Then make a plot of the error stratified by pollster, but only for pollsters who took 5 or more polls.
+polls %>% 
+  mutate(error = d_hat - 0.021) %>%
+  group_by(pollster) %>%
+  filter(n() >= 5) %>%
+  ggplot(aes(x = pollster, y = error)) +
+  geom_point() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
