--- a/4 Inference and Modeling/Inference and Modeling Notes.Rmd
+++ b/4 Inference and Modeling/Inference and Modeling Notes.Rmd
@@ -1568,3 +1568,559 @@ table(outcome, test)
 -   Frequentist statistics can have problems when sample sizes are small and when the data are extreme compared to historical results.
 
 -   *Bayesian statistics* allows prior knowledge to modify observed results, which alters our conclusions about event probabilities.
+
+### The Hierarchical Model
+
+![](images/clipboard-680538121.png)
+
+# Assessment 5.1: Bayesian Statistics
+
+## Exercise 1 -  Statistics in the Courtroom
+
+![](images/clipboard-300237191.png)
+
+![](images/clipboard-2206392129.png)
+
+## Exercise 2 - Recalculating the SIDS Statistics
+
+![](images/clipboard-2616335460.png)
+
+-   Calculate the probability of both sons dying to SIDS.
+
+```{r}
+# Define `Pr_1` as the probability of the first son dying of SIDS
+Pr_1 <- 1/8500
+
+# Define `Pr_2` as the probability of the second son dying of SIDS
+Pr_2 <- 1/100
+
+# Calculate the probability of both sons dying of SIDS. Print this value to the console.
+Pr_1*Pr_2
+```
+
+## Exercise 3 - Bayes' Rule in the Courtroom
+
+![](images/clipboard-3251337734.png)
+
+![](images/clipboard-1521138248.png)
+
+## Exercise 4 - Calculate the Probability
+
+![](images/clipboard-115037256.png)
+
+-   Use Bayes' rule to calculate the probability that the mother is a murderer, considering the rates of murdering mothers in the population, the probability that two siblings die of SIDS, and the probability that a murderer kills children without leaving evidence of physical harm.
+
+-   Print your result to the console.
+
+```{r}
+# Define `Pr_1` as the probability of the first son dying of SIDS
+Pr_1 <- 1/8500
+
+# Define `Pr_2` as the probability of the second son dying of SIDS
+Pr_2 <- 1/100
+
+# Define `Pr_B` as the probability of both sons dying of SIDS
+Pr_B <- Pr_1*Pr_2
+
+# Define Pr_A as the rate of mothers that are murderers
+Pr_A <- 1/1000000
+
+# Define Pr_BA as the probability that two children die without evidence of harm, given that their mother is a murderer
+Pr_BA <- 0.50
+
+# Define Pr_AB as the probability that a mother is a murderer, given that her two children died with no evidence of physical harm. Print this value to the console.
+Pr_BA*Pr_A/Pr_B
+```
+
+## Exercise 5 - Misuse of Statistics in the Courts
+
+After Sally Clark was found guilty, the Royal Statistical Society issued a statement saying that there was "no statistical basis" for the expert's claim. They expressed concern at the "misuse of statistics in the courts". Eventually, Sally Clark was acquitted in June 2003.
+
+In addition to misusing the multiplicative rule as we saw earlier, what else did Sir Meadow miss?
+
+![After using Bayes' rule, we found a probability closer to 0.5 than 1 in 73 million. ](images/clipboard-3783145209.png)
+
+## Exercise 6 - Back to Election Polls
+
+Florida is one of the most closely watched states in the U.S. election because it has many electoral votes and the election is generally close. Create a table with the poll spread results from Florida taken during the last days before the election using the sample code.
+
+The CLT tells us that the average of these spreads is approximately normal. Calculate a spread average and provide an estimate of the standard error.
+
+-   Calculate the average of the spreads. Call this average `avg` in the final table.
+
+-   Calculate an estimate of the standard error of the spreads. Call this standard error `se` in the final table.
+
+-   Use the `mean` and `sd` functions nested within `summarize` to find the average and standard deviation of the grouped `spread` data.
+
+-   Save your results in an object called `results`.
+
+```{r}
+# Load the libraries and poll data
+library(dplyr)
+library(dslabs)
+data(polls_us_election_2016)
+
+# Create an object `polls` that contains the spread of predictions for each candidate in Florida during the last polling days
+polls <- polls_us_election_2016 %>% 
+  filter(state == "Florida" & enddate >= "2016-11-04" ) %>% 
+  mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100)
+
+# Examine the `polls` object using the `head` function
+head(polls)
+
+# Create an object called `results` that has two columns containing the average spread (`avg`) and the standard error (`se`). Print the results to the console.
+results <- polls %>%
+  summarize(avg = mean(spread), se = sd(spread)/sqrt(n()))
+results 
+```
+
+## Exercise 7 - The Prior Distribution
+
+![](images/clipboard-3993679019.png)
+
+![](images/clipboard-1845618908.png)
+
+Based on past elections, we would set mu close to 0, because both Republicans and Democrats have won, and tau at about 0.02, because these elections tend to be close.
+
+## Exercise 8 - Estimate the Posterior Distribution
+
+![](images/clipboard-3443386560.png)
+
+![](images/clipboard-2399741453.png)
+
+```{r}
+# The results` object has already been loaded. Examine the values stored: `avg` and `se` of the spread
+results
+
+# Define `mu` and `tau`
+mu <- 0
+tau <- 0.01
+
+# Define a variable called `sigma` that contains the standard error in the object `results`
+sigma <- results$se
+
+# Define a variable called `Y` that contains the average in the object `results`
+Y <- results$avg
+
+# Define a variable `B` using `sigma` and `tau`. Print this value to the console.
+B <- sigma^2/(sigma^2 + tau^2)
+
+# Calculate the expected value of the posterior distribution
+B*mu + (1-B)*Y
+```
+
+## Exercise 9 - Standard Error of the Posterior Distribution
+
+Compute the standard error of the posterior distribution.
+
+-   Using the variables we have defined so far, calculate the standard error of the posterior distribution.
+
+-   Print this value to the console.
+
+```{r}
+# Here are the variables we have defined
+mu <- 0
+tau <- 0.01
+sigma <- results$se
+Y <- results$avg
+B <- sigma^2 / (sigma^2 + tau^2)
+
+# Compute the standard error of the posterior distribution. Print this value to the console.
+sqrt(1/(1/sigma^2 + 1/tau^2))
+```
+
+## Exercise 10- Constructing a Credible Interval
+
+Using the fact that the posterior distribution is normal, create an interval that has a 95% of occurring centered at the posterior expected value. Note that we call these credible intervals.
+
+-   Calculate the 95% credible intervals using the `qnorm` function.
+
+-   Save the lower and upper confidence intervals as an object called `ci`. Save the lower confidence interval first.
+
+```{r}
+# Here are the variables we have defined in previous exercises
+mu <- 0
+tau <- 0.01
+sigma <- results$se
+Y <- results$avg
+B <- sigma^2 / (sigma^2 + tau^2)
+se <- sqrt( 1/ (1/sigma^2 + 1/tau^2))
+
+# Construct the 95% credible interval. Save the lower and then the upper confidence interval to a variable called `ci`.
+ci <- c(B*mu+(1-B)*Y - qnorm(0.975)*se,B*mu+(1-B)*Y + qnorm(0.975)*se)
+ci
+```
+
+## Exercise 11 - Odds of Winning Florida
+
+According to this analysis, what was the probability that Trump wins Florida?
+
+-   Using the `pnorm` function, calculate the probability that the spread in Florida was less than 0.
+
+```{r}
+# Assign the expected value of the posterior distribution to the variable `exp_value`
+exp_value <- B*mu + (1-B)*Y 
+
+# Assign the standard error of the posterior distribution to the variable `se`
+se <- sqrt( 1/ (1/sigma^2 + 1/tau^2))
+
+# Using the `pnorm` function, calculate the probability that the actual spread was less than 0 (in Trump's favor). Print this value to the console.
+pnorm(0, exp_value, se)
+```
+
+## Exercise 12 - Change the Priors
+
+![](images/clipboard-1927030425.png)
+
+-   Create a vector of values of `taus` by executing the sample code.
+
+```{=html}
+<!-- -->
+```
+-   Create a function using `function(){}` called `p_calc` that takes the value `tau` as the only argument, then calculates `B` from `tau` and `sigma`, and then calculates the probability of Trump winning, as we did in the previous exercise.
+
+```{=html}
+<!-- -->
+```
+-   Apply your `p_calc` function across all the new values of `taus`.
+
+```{=html}
+<!-- -->
+```
+-   Use the `plot` function to plot tau on the x-axis and the new probabilities on the y-axis.
+
+```{r}
+# Define the variables from previous exercises
+mu <- 0
+sigma <- results$se
+Y <- results$avg
+
+# Define a variable `taus` as different values of tau
+taus <- seq(0.005, 0.05, len = 100)
+
+# Create a function called `p_calc` that generates `B` and calculates the probability of the spread being less than 0
+p_calc <- function(tau){
+    B <- sigma^2/(sigma^2 + tau^2)
+    exp_val <- B * mu + (1-B) * Y
+    se <- sqrt(1/(1/sigma^2 + 1/tau^2))
+    pnorm(0, exp_val, se)
+}
+
+# Create a vector called `ps` by applying the function `p_calc` across values in `taus`
+ps <- sapply(taus, p_calc)
+
+# Plot `taus` on the x-axis and `ps` on the y-axis
+plot(taus, ps)
+```
+
+# Section 6 Overview
+
+In Section 6, you will learn about election forecasting, building on what you’ve learned in the previous sections about statistical modeling and Bayesian statistics.
+
+After completing Section 6, you will be able to:
+
+-   Understand how pollsters use hierarchical models to forecast the results of elections.
+
+-   Incorporate multiple sources of variability into a mathematical model to make predictions.
+
+-   Construct confidence intervals that better model deviations such as those seen in election data using the t-distribution.
+
+### Election Forecasting
+
+![](images/clipboard-15091066.png)
+
+#### Code: Definition of `results` object
+
+This code from previous videos defines the `results` object used for empirical Bayes election forecasting.
+
+```{r}
+library(tidyverse)
+library(dslabs)
+polls <- polls_us_election_2016 %>%
+    filter(state == "U.S." & enddate >= "2016-10-31" &
+                 (grade %in% c("A+", "A", "A-", "B+") | is.na(grade))) %>%
+    mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100)
+
+one_poll_per_pollster <- polls %>% group_by(pollster) %>%
+    filter(enddate == max(enddate)) %>%
+    ungroup()
+
+results <- one_poll_per_pollster %>%
+    summarize(avg = mean(spread), se = sd(spread)/sqrt(length(spread))) %>%
+    mutate(start = avg - 1.96*se, end = avg + 1.96*se)
+```
+
+#### Code: Computing the posterior mean, standard error, credible interval and probability
+
+Note that to compute an exact 95% credible interval, we would use `qnorm(.975)` instead of 1.96.
+
+```{r}
+mu <- 0
+tau <- 0.035
+sigma <- results$se
+Y <- results$avg
+B <- sigma^2 / (sigma^2 + tau^2)
+posterior_mean <- B*mu + (1-B)*Y
+posterior_se <- sqrt(1 / (1/sigma^2 + 1/tau^2))
+
+posterior_mean
+posterior_se
+
+# 95% credible interval
+posterior_mean + c(-1.96, 1.96)*posterior_se
+
+# probability of d > 0
+1 - pnorm(0, posterior_mean, posterior_se)
+```
+
+### Mathematical Representations of Models
+
+![](images/clipboard-2269672027.png)
+
+### Code ![](images/clipboard-2654830891.png)
+
+```{r}
+I <- 5
+J <- 6
+N <- 2000
+d <- .021
+p <- (d+1)/2
+X <- sapply(1:I, function(i){
+    d + rnorm(J, 0, 2*sqrt(p*(1-p)/N))
+})
+```
+
+### Code
+
+![](images/clipboard-670401643.png)
+
+```{r}
+I <- 5
+J <- 6
+N <- 2000
+d <- .021
+p <- (d+1)/2
+X <- sapply(1:I, function(i){
+    d + rnorm(J, 0, 2*sqrt(p*(1-p)/N))
+})
+```
+
+### Code
+
+![](images/clipboard-118085763.png)
+
+```{r}
+I <- 5
+J <- 6
+N <- 2000
+d <- .021
+p <- (d+1)/2
+h <- rnorm(I, 0, 0.025)    # assume standard error of pollster-to-pollster variability is 0.025
+X <- sapply(1:I, function(i){
+    d + h[i] + rnorm(J, 0, 2*sqrt(p*(1-p)/N))
+})
+```
+
+### Code: Calculating probability of  d\>0 with general bias
+
+Note that `sigma` now includes an estimate of the variability due to general bias ![](images/clipboard-548833200.png){width="70" height="21"}.
+
+```{r}
+mu <- 0
+tau <- 0.035
+sigma <- sqrt(results$se^2 + .025^2)
+Y <- results$avg
+B <- sigma^2 / (sigma^2 + tau^2)
+
+posterior_mean <- B*mu + (1-B)*Y
+posterior_se <- sqrt(1 / (1/sigma^2 + 1/tau^2))
+
+1 - pnorm(0, posterior_mean, posterior_se)
+```
+
+## Predicting the Electoral College
+
+-   In the US election, each state has a certain number of votes that are won all-or-nothing based on the popular vote result in that state (with minor exceptions not discussed here).
+
+-   We use the `left_join()` function to combine the number of electoral votes with our poll results.
+
+-   For each state, we apply a Bayesian approach to generate an Election Day . We keep our prior simple by assuming an expected value of 0 and a standard deviation based on recent history of 0.02.
+
+-   We can run a Monte Carlo simulation that for each iteration simulates poll results in each state using that state's average and standard deviation, awards electoral votes for each state to Clinton if the spread is greater than 0, then compares the number of electoral votes won to the number of votes required to win the election (over 269).
+
+-   If we run a Monte Carlo simulation for the electoral college without accounting for general bias, we overestimate Clinton's chances of winning at over 99%.
+
+-   If we include a general bias term, the estimated probability of Clinton winning decreases significantly.
+
+#### Code: Top 5 states ranked by electoral votes
+
+The `results_us_election_2016` object is defined in the **dslabs** package:
+
+```{r}
+library(tidyverse)
+library(dslabs)
+data("polls_us_election_2016")
+head(results_us_election_2016)
+
+results_us_election_2016 %>% arrange(desc(electoral_votes)) %>% top_n(5, electoral_votes)
+```
+
+#### Code: Computing the average and standard deviation for each state
+
+```{r}
+results <- polls_us_election_2016 %>%
+    filter(state != "U.S." &
+            !grepl("CD", state) &
+            enddate >= "2016-10-31" &
+            (grade %in% c("A+", "A", "A-", "B+") | is.na(grade))) %>%
+    mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100) %>%
+    group_by(state) %>%
+    summarize(avg = mean(spread), sd = sd(spread), n = n()) %>%
+    mutate(state = as.character(state))
+
+# 10 closest races = battleground states
+results %>% arrange(abs(avg))
+
+# joining electoral college votes and results
+results <- left_join(results, results_us_election_2016, by="state")
+
+# states with no polls: note Rhode Island and District of Columbia = Democrat
+results_us_election_2016 %>% filter(!state %in% results$state)
+
+# assigns sd to states with just one poll as median of other sd values
+results <- results %>%
+    mutate(sd = ifelse(is.na(sd), median(results$sd, na.rm = TRUE), sd))
+```
+
+#### Code: Calculating the posterior mean and posterior standard error
+
+Note there is a small error in the video code: B should be defined as `sigma^2/(sigma^2 + tau^2)`.
+
+```{r}
+mu <- 0
+tau <- 0.02
+results %>% mutate(sigma = sd/sqrt(n),
+                   B = sigma^2/ (sigma^2 + tau^2),
+                   posterior_mean = B*mu + (1-B)*avg,
+                   posterior_se = sqrt( 1 / (1/sigma^2 + 1/tau^2))) %>%
+    arrange(abs(posterior_mean))
+```
+
+#### Code: Monte Carlo simulation of Election Night results (no general bias)
+
+```{r}
+mu <- 0
+tau <- 0.02
+clinton_EV <- replicate(1000, {
+    results %>% mutate(sigma = sd/sqrt(n),
+                       B = sigma^2/ (sigma^2 + tau^2),
+                       posterior_mean = B*mu + (1-B)*avg,
+                       posterior_se = sqrt( 1 / (1/sigma^2 + 1/tau^2)),
+                       simulated_result = rnorm(length(posterior_mean), posterior_mean, posterior_se),
+                       clinton = ifelse(simulated_result > 0, electoral_votes, 0)) %>%    # award votes if Clinton wins state
+        summarize(clinton = sum(clinton)) %>%    # total votes for Clinton
+        .$clinton + 7    # 7 votes for Rhode Island and DC
+})
+mean(clinton_EV > 269)    # over 269 votes wins election
+
+# histogram of outcomes
+data.frame(clintonEV) %>%
+    ggplot(aes(clintonEV)) +
+    geom_histogram(binwidth = 1) +
+    geom_vline(xintercept = 269)
+```
+
+### Code: Monte Carlo simulation including general bias
+
+```{r}
+mu <- 0
+tau <- 0.02
+bias_sd <- 0.03
+clinton_EV_2 <- replicate(1000, {
+    results %>% mutate(sigma = sqrt(sd^2/(n) + bias_sd^2),    # added bias_sd term
+                        B = sigma^2/ (sigma^2 + tau^2),
+                        posterior_mean = B*mu + (1-B)*avg,
+                        posterior_se = sqrt( 1 / (1/sigma^2 + 1/tau^2)),
+                        simulated_result = rnorm(length(posterior_mean), posterior_mean, posterior_se),
+                        clinton = ifelse(simulated_result > 0, electoral_votes, 0)) %>%    # award votes if Clinton wins state
+        summarize(clinton = sum(clinton)) %>%    # total votes for Clinton
+        .$clinton + 7    # 7 votes for Rhode Island and DC
+})
+mean(clinton_EV_2 > 269)    # over 269 votes wins election
+```
+
+## Forecasting
+
+![](images/clipboard-1026693294.png)
+
+#### Code: Variability across one pollster
+
+```{r}
+# select all national polls by one pollster
+one_pollster <- polls_us_election_2016 %>%
+    filter(pollster == "Ipsos" & state == "U.S.") %>%
+    mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100)
+
+# the observed standard error is higher than theory predicts
+se <- one_pollster %>%
+    summarize(empirical = sd(spread),
+            theoretical = 2*sqrt(mean(spread)*(1-mean(spread))/min(samplesize)))
+se
+
+# the distribution of the data is not normal
+one_pollster %>% ggplot(aes(spread)) +
+    geom_histogram(binwidth = 0.01, color = "black")
+```
+
+#### Code: Trend across time for several pollsters
+
+```{r}
+polls_us_election_2016 %>%
+    filter(state == "U.S." & enddate >= "2016-07-01") %>%
+    group_by(pollster) %>%
+    filter(n() >= 10) %>%
+    ungroup() %>%
+    mutate(spread = rawpoll_clinton/100 - rawpoll_trump/100) %>%
+    ggplot(aes(enddate, spread)) +
+    geom_smooth(method = "loess", span = 0.1) +
+    geom_point(aes(color = pollster), show.legend = FALSE, alpha = 0.6)
+```
+
+#### Code: Plotting raw percentages across time
+
+```{r}
+polls_us_election_2016 %>%
+    filter(state == "U.S." & enddate >= "2016-07-01") %>%
+    select(enddate, pollster, rawpoll_clinton, rawpoll_trump) %>%
+    rename(Clinton = rawpoll_clinton, Trump = rawpoll_trump) %>%
+    gather(candidate, percentage, -enddate, -pollster) %>%
+    mutate(candidate = factor(candidate, levels = c("Trump", "Clinton"))) %>%
+    group_by(pollster) %>%
+    filter(n() >= 10) %>%
+    ungroup() %>%
+    ggplot(aes(enddate, percentage, color = candidate)) +
+    geom_point(show.legend = FALSE, alpha = 0.4) +
+    geom_smooth(method = "loess", span = 0.15) +
+    scale_y_continuous(limits = c(30, 50))
+```
+
+# Assessment 6.1: Election Forecasting
+
+## The t-Distribution
+
+![](images/clipboard-2316721786.png)
+
+#### Code: Calculating 95% confidence intervals with the t-distribution
+
+```{r}
+z <- qt(0.975, nrow(one_poll_per_pollster) - 1)
+one_poll_per_pollster %>%
+    summarize(avg = mean(spread), moe = z*sd(spread)/sqrt(length(spread))) %>%
+    mutate(start = avg - moe, end = avg + moe)
+
+# quantile from t-distribution versus normal distribution
+qt(0.975, 14)    # 14 = nrow(one_poll_per_pollster) - 1
+qnorm(0.975)
+```
+
+# Assessment 6.2: The t-Distribution
